--- a/packages/gmap-vue-next/package.json
+++ b/packages/gmap-vue-next/package.json
@@ -4,7 +4,7 @@
   "description": "This is a google map component for Vue.js, updated for Vue 2 compatibility",
   "main": "dist/main.umd.js",
   "module": "dist/main.es.js",
-  "typings": "dist/types/main.d.ts",
+  "typings": "dist/types/src/main.d.ts",
   "unpkg": "dist/main.umd.js",
   "jsdelivr": "dist/main.umd.js",
   "browser": {
@@ -59,63 +59,63 @@
   },
   "homepage": "https://github.com/diegoazh/gmap-vue#readme",
   "dependencies": {
-    "@googlemaps/markerclusterer": "^2.0.13",
+    "@googlemaps/markerclusterer": "^2.1.4",
     "lodash.isequal": "^4.5.0",
     "mitt": "^3.0.0",
-    "vue": "^3.2.44"
+    "vue": "^3.3.4"
   },
   "devDependencies": {
-    "@rushstack/eslint-patch": "^1.2.0",
-    "@semantic-release/changelog": "^6.0.1",
+    "@rushstack/eslint-patch": "^1.3.0",
+    "@semantic-release/changelog": "^6.0.3",
     "@semantic-release/git": "^10.0.1",
-    "@swc/core": "^1.3.14",
-    "@types/google.maps": "^3.50.5",
-    "@types/jsdom": "^20.0.1",
+    "@swc/core": "^1.3.60",
+    "@types/google.maps": "^3.53.2",
+    "@types/jsdom": "^21.1.1",
     "@types/lodash.isequal": "^4.5.6",
-    "@types/node": "^18.11.9",
-    "@typescript-eslint/eslint-plugin": "^5.42.1",
-    "@typescript-eslint/parser": "^5.42.1",
-    "@vitejs/plugin-vue": "^3.2.0",
-    "@vitest/coverage-c8": "^0.25.1",
+    "@types/node": "^20.2.5",
+    "@typescript-eslint/eslint-plugin": "^5.59.7",
+    "@typescript-eslint/parser": "^5.59.7",
+    "@vitejs/plugin-vue": "^4.2.3",
+    "@vitest/coverage-c8": "^0.31.1",
     "@vue/eslint-config-airbnb": "^7.0.0",
-    "@vue/eslint-config-prettier": "^7.0.0",
-    "@vue/eslint-config-typescript": "^11.0.2",
-    "@vue/test-utils": "^2.2.1",
-    "@vue/tsconfig": "^0.1.3",
-    "@vue/vue3-jest": "^29.2.0",
+    "@vue/eslint-config-prettier": "^7.1.0",
+    "@vue/eslint-config-typescript": "^11.0.3",
+    "@vue/test-utils": "^2.3.2",
+    "@vue/tsconfig": "^0.4.0",
+    "@vue/vue3-jest": "^29.2.4",
     "cpx": "^1.5.0",
     "cross-env": "^7.0.3",
-    "cypress": "^11.0.1",
+    "cypress": "^12.13.0",
     "cypress-plugin-tab": "^1.0.5",
     "dotenv": "^16.0.3",
-    "eslint": "^8.27.0",
+    "eslint": "^8.41.0",
     "eslint-config-airbnb-base": "^15.0.0",
-    "eslint-config-prettier": "^8.5.0",
+    "eslint-config-prettier": "^8.8.0",
     "eslint-config-standard": "^17.0.0",
-    "eslint-plugin-cypress": "^2.12.1",
+    "eslint-plugin-cypress": "^2.13.3",
     "eslint-plugin-eslint-comments": "^3.2.0",
-    "eslint-plugin-import": "^2.26.0",
+    "eslint-plugin-import": "^2.27.5",
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-promise": "^6.1.1",
     "eslint-plugin-standard": "^5.0.0",
-    "eslint-plugin-vue": "^9.7.0",
-    "eslint-plugin-vuejs-accessibility": "^2.0.0",
-    "gh-pages": "^4.0.0",
-    "happy-dom": "^7.6.7",
-    "jsdom": "^20.0.2",
-    "lint-staged": "^13.0.3",
+    "eslint-plugin-vue": "^9.14.1",
+    "eslint-plugin-vuejs-accessibility": "^2.1.0",
+    "gh-pages": "^5.0.0",
+    "happy-dom": "^9.20.3",
+    "jsdom": "^22.0.0",
+    "lint-staged": "^13.2.2",
     "npm-run-all": "^4.1.5",
-    "prettier": "^2.7.1",
-    "rimraf": "^3.0.2",
-    "semantic-release": "^19.0.5",
+    "prettier": "^2.8.8",
+    "rimraf": "^5.0.1",
+    "semantic-release": "^21.0.2",
     "semantic-release-cli": "^5.4.4",
-    "start-server-and-test": "^1.14.0",
+    "start-server-and-test": "^2.0.0",
     "stylus": "^0.59.0",
-    "typescript": "~4.8.4",
-    "vite": "^3.2.3",
-    "vite-plugin-dts": "^1.7.0",
-    "vitest": "^0.25.1",
-    "vue-tsc": "^1.0.9"
+    "typescript": "~5.0.4",
+    "vite": "^4.3.9",
+    "vite-plugin-dts": "^2.3.0",
+    "vitest": "^0.31.1",
+    "vue-tsc": "^1.6.5"
   },
   "author": "Diego A. Zapata Häntsch, Daniel Sim, Guillaume Leclerc",
   "license": "MIT"
