--- a/packages/v3/package.json
+++ b/packages/v3/package.json
@@ -28,10 +28,10 @@
     "coverage": "vitest run --coverage",
     "test:e2e": "start-server-and-test test:e2e:vite:server http://localhost:4173/ 'pnpm exec cypress open --e2e'",
     "test:e2e:ci": "start-server-and-test test:e2e:vite:server http://localhost:4173/ 'pnpm exec cypress run --e2e'",
-    "test:e2e:build": "path-exists ./dist/main.es.js && vite build --config cypress/runner/vite.config.js || pnpm run build && vite build --config cypress/runner/vite.config.js",
+    "test:e2e:build": "pnpm run build && vite build --config cypress/runner/vite.config.js",
     "test:e2e:preview": "vite preview --config cypress/runner/vite.config.js",
     "test:e2e:vite:server": "pnpm run test:e2e:build && pnpm run test:e2e:preview",
-    "test:e2e:node:server": "node cypress/runner/runner.cjs",
+    "test:e2e:node:server": "pnpm run test:e2e:build && node cypress/runner/runner.cjs",
     "lint": "prettier --write ./src && eslint . --ext .vue,.js,.jsx,.cjs,.mjs,.ts,.tsx,.cts,.mts --fix --ignore-path .gitignore",
     "lint-staged": "lint-staged",
     "copy:components": "cpx \"./src/components/*.vue\" \"./build/src/components\" --verbose",
@@ -87,7 +87,6 @@
     "jsdom": "^22.0.0",
     "lint-staged": "^13.2.2",
     "npm-run-all": "^4.1.5",
-    "path-exists-cli": "^2.0.0",
     "prettier": "^2.8.8",
     "rimraf": "^5.0.1",
     "semantic-release": "^21.0.2",
